src/test/testFiles/invalid/semanticErrors/incompatibleExplicitCast.manimdsl
let x: number = Stack<number>();